	Fixed slapd config_generic_wrapper missing parameter bug (ITS#4376)
	Fixed slapd extensible filter value normalization bug (ITS#4380)
	Fixed slapd context CSN not updating issue (ITS#4384)
	Fixed slapd non-read/write epoll event handling (ITS#4395)
	Fixed slapd syncrepl de-normalize UUID issue
	Added slapd syncrepl log messages (ITS#4369)
	Fixed slapd connectionless LDAP support
	Fixed slapd-bdb/hdb wake listener on runqueue submit (ITS#4385)
	Fixed slapo-auditlog crash (ITS#4394)
	Fixed slapo-accesslog unbind crash (ITS#4386)
	Fixed slapo-syncprov update latency issue (ITS#4385)
	Fixed slurpd reject error formating (ITS#4382)
	Build Environment
		Fixed liblunicode cross compiling problem (ITS#4363)
		Updated <netinet/tcp.h> detection for AIX (ITS#4312)
		Updated multi-precision library detection

OpenLDAP 2.3.19 Release
	Fixed libldap disable DH key exchange with DH params (ITS#4354)
	Fixed libldap_r thread pool destroy hang (ITS#4349,ITS#4368)
	Fixed slapd slap_daemon destroy issue (ITS#4370)
	Fixed slapd-hdb livelock issue (ITS#4360)
	Fixed slapd-bdb/hdb auto-recovery issue (ITS#4361,ITS#4373)
	Fixed slapd-bdb/hdb BDB 4.4 compatibility issues (ITS#4362)
	Fixed slapo-ppolicy modify issue (ITS#4355)
	Fixed slapo-syncprov/pcache filter dup issue (ITS#4364)
	Fixed slapo-syncprov playlog nentries reset issue (ITS#4365)
	Build environment
		Fixed slaptools when --disable-debug (ITS#4351)
		Fixed slapd(8) solaris select(2) issue (ITS#4357)

OpenLDAP 2.3.18 Release
	Fixed slapd syncrepl variable used before set bug (ITS#4331)
	Updated slapd-meta retry capabilities (ITS#4328)
	Fixed slapd-bdb slapcat autorecover bug (ITS#4324)
	Fixed slapo-chain search limits (ITS#4336)
	Fixed slapo-pcache attrsets issues (ITS#4316)
	Fixed slapo-translucent connection destroy (ITS#4334)
	Fixed slapd-config handling of attribute options (ITS#4339)
	Fixed slapd-ldap idassert resource leak (ITS#4326)
	Fixed slapd-meta nretries issue (ITS#4059)