@@ -8,6 +8,7 @@ OpenLDAP 2.3.20 Engineering
 	Fixed slapd non-read/write epoll event handling (ITS#4395)
 	Fixed slapd syncrepl de-normalize UUID issue
 	Added slapd syncrepl log messages (ITS#4369)
+	Added slapd permissive modify/increment support
 	Fixed slapd connectionless LDAP support
 	Fixed slapd-bdb/hdb wake listener on runqueue submit (ITS#4385)
 	Fixed slapo-auditlog crash (ITS#4394)
